--- a/AudioAnalysisTools.uplugin
+++ b/AudioAnalysisTools.uplugin
@@ -20,21 +20,7 @@
 		{
 			"Name": "AudioAnalysisTools",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Win32",
-				"Mac",
-				"Android",
-				"IOS",
-				"Linux"
-			],
-			"BlacklistPlatforms": [
-				"XboxOne",
-				"PS4",
-				"TVOS",
-				"Switch"
-			]
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
