Adding FunctionRedirects for functions like "GetAudioFrameFromSoundWave" -> "GetAudioByCurrentTime", "GetAudioFrameFromSoundWaveByFrames" -> "GetAudioByFrameSize", etc.

--- a/Config/DefaultAudioAnalysisTools.ini
+++ b/Config/DefaultAudioAnalysisTools.ini
@@ -1,3 +1,10 @@
 [CoreRedirects]
 +PropertyRedirects=(OldName="AudioAnalysisToolsLibrary.BeatDetectionRef",NewName="BeatDetection")
 +PropertyRedirects=(OldName="AudioAnalysisToolsLibrary.OnsetDetectionRef",NewName="OnsetDetection")
+
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWave",NewName="GetAudioByCurrentTime")
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByFrames",NewName="GetAudioByFrameSize")
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByFramesCustom",NewName="GetAudioByFrameRange")
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByTime",NewName="GetAudioByTimeLength")
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByTimeCustom",NewName="GetAudioByTimeRange")
++FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.ProcessAudioFrame",NewName="ProcessAudioFrames")
