Replacing the support link URL

--- a/AudioAnalysisTools.uplugin
+++ b/AudioAnalysisTools.uplugin
@@ -9,7 +9,7 @@
   "CreatedByURL": "https://github.com/gtreshchev",
   "DocsURL": "https://github.com/gtreshchev/AudioAnalysisTools/wiki",
   "MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/54f6567f89184beb9203f6211c791175",
-  "SupportURL": "https://telegram.me/gtreshchev",
+  "SupportURL": "https://georgy.dev/",
   "EnabledByDefault": true,
   "CanContainContent": false,
   "IsBetaVersion": false,
