Rename function "CreateWindow" to "CreateWindowByType" to prevent conflicts with the Windows API, add a corresponding function redirect

--- a/Config/DefaultAudioAnalysisTools.ini
+++ b/Config/DefaultAudioAnalysisTools.ini
@@ -8,3 +8,4 @@
 +FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByTime",NewName="GetAudioByTimeLength")
 +FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByTimeCustom",NewName="GetAudioByTimeRange")
 +FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.ProcessAudioFrame",NewName="ProcessAudioFrames")
++FunctionRedirects=(OldName="WindowsLibrary.CreateWindow",NewName="CreateWindowByType")
