Set the loading phase of the AudioAnalysisTools module to PreDefault

--- a/AudioAnalysisTools.uplugin
+++ b/AudioAnalysisTools.uplugin
@@ -19,7 +19,7 @@
     {
       "Name": "AudioAnalysisTools",
       "Type": "Runtime",
-      "LoadingPhase": "Default"
+      "LoadingPhase": "PreDefault"
     }
   ],
   "Plugins": [
