--- a/Config/DefaultAudioAnalysisTools.ini
+++ b/Config/DefaultAudioAnalysisTools.ini
@@ -9,3 +9,4 @@
 +FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.GetAudioFrameFromSoundWaveByTimeCustom",NewName="GetAudioByTimeRange")
 +FunctionRedirects=(OldName="AudioAnalysisToolsLibrary.ProcessAudioFrame",NewName="ProcessAudioFrames")
 +FunctionRedirects=(OldName="WindowsLibrary.CreateWindow",NewName="CreateWindowByType")
++ClassRedirects=(OldName="/Script/AudioAnalysisTools.FFTAnalyzer",NewName="/Script/AudioAnalysisTools.FFTAudioAnalyzer")
