Update CreatedByURL and DocsURL

--- a/AudioAnalysisTools.uplugin
+++ b/AudioAnalysisTools.uplugin
@@ -6,8 +6,8 @@
   "Description": "Audio Analysis Tools plugin for Unreal Engine. Provides a variety of functions for analyzing audio data. Works in conjunction with the Runtime Audio Importer plugin.",
   "Category": "Audio",
   "CreatedBy": "Georgy Treshchev",
-  "CreatedByURL": "https://github.com/gtreshchev",
-  "DocsURL": "https://github.com/gtreshchev/AudioAnalysisTools/wiki",
+  "CreatedByURL": "https://georgy.dev/",
+  "DocsURL": "https://docs.georgy.dev/audio-analysis-tools/overview",
   "MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/54f6567f89184beb9203f6211c791175",
   "SupportURL": "https://georgy.dev/",
   "EnabledByDefault": true,
